# xunit_tdd

./: .gitignore  README.md  lista_de_tarefas.rtf  main.py  pushtask.bat  requirements.txt  runmodule.bat  setup.cfg  test_testcase.py  test_testresult.py  test_testsuite.py  test_testsummary.py  test_xunit.py  tests.py  xunit.py  xunittest.py
src/xunit/: __init__.py  loader.py  packagemanager.py  testcolours.py  testexceptions.py  testresult.py
src/xunit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_captureexception.py  test_colours.py  test_facade.py  test_loader.py  test_status.py  test_test.py  test_testcase.py  test_testresult.py  test_testsubject.py  test_testsuite.py  test_testsummary.py  testclasses.py  testmodule.py
tests/testpackage/: packagemodule.py  packagemodule2.py
tests/testpackage/subpackage/: ignore.txt  subpackagemodule.py
xunit/: __init__.py  __main__.py  testcase.py
xunit/src/: __init__.py  formatters.py  loader.py  log.py  observer.py  packagemanager.py  status.py  testcase.py  testcolors.py  testcolours.py  testdecorator.py  testerrorinfo.py  testexceptions.py  testresult.py  testsuite.py  testsummary.py
xunit/src/factories/: __init__.py  (+4 more)
xunit/tests/: __init__.py  ignore.txt  test_captureexception.py  test_colors.py  test_colours.py  test_errors.py  test_facade.py  test_fromcommandline.py  test_loader.py  test_packagemanager.py  test_status.py  test_test.py  test_testcase.py  test_testresult.py  test_testsubject.py  test_testsuite.py  test_testsummary.py  test_verbose_factory.py  testclasses.py  testmodule.py
(+7 files in other folders)
