[metadata]
name = xunit
description = Python package for unit testing
author = Lucas Ferreira dos Santos
license = MIT
license-file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    xunit
install_requires = 
    colorama>=0.4.0
    mypy>=1.1.0
    mypy-extensions>=1.0.0
    termcolor>=2.2.0
    types-colorama>=0.4.15.0
    typing_extensions>=4.5.0
python_requires = >=3.11
package_dir = 
    =src
zip_safe = no